--- a/styles/main.css
+++ b/styles/main.css
@@ -6,3 +6,64 @@ body{
 h1, h2{
     font-family: 'Raleway', sans-serif;
 }
+header h1 a{
+    color:#fff;
+    text-decoration: none;
+}
+header h1 a:hover{
+    text-decoration: underline;
+}
+#logo{
+    padding:10px;
+}
+header{
+    background-color:#263248;	
+    border-radius:8px;
+    display:flex;
+    justify-content: space-between;
+}
+
+
+section{
+    padding:0 10px 10px 0;
+}
+.sidebar{
+    padding:20px 40px;	
+    border:1px solid #ccc;
+    border-radius:8px;
+    margin-top: 70px;
+}
+
+
+.container
+{
+    border:4px solid #ffff00;
+    margin:50px;
+    padding:50px;
+    margin:auto;
+    max-width: 1200px;
+    min-width: 600px;
+
+}
+
+nav ul li{	
+    display:inline;
+    padding-left:10px;
+    padding-right:10px;
+    border-left:1px solid #7E8AA2;
+}
+nav li:first-child{
+    border-left:none;	
+}
+nav li a{
+    text-decoration: none;	
+    color: #fff;	
+}
+nav li a:hover{
+    color: #7E8AA2;	
+}
+
+main{
+    display:flex;
+    gap: 15px;
+}
